fixed parks not showing

--- a/style.css
+++ b/style.css
@@ -7,22 +7,6 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
-
-#app {
-    margin: auto;
-    width: 50%;
-    padding: 10px;
-    text-align: center;
-}
-
-img {
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-    padding: 10px;
-    float: left;
-}
-
 h1 {
     color: darkgreen;
     font-size: 85px;
@@ -35,12 +19,40 @@ p {
     overflow: hidden;
     padding: 10px;
 }
-
+#center {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    text-align: center;
+}
+img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    padding: 10px;
+    float: left;
+}
 ul {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 15px;
     padding: 10px;
     overflow: hidden;
+}
+#park{
+    background-color: white;
+    margin: auto;
+    width: 50%;
+    overflow: hidden;
+}
+a {
+    font-family: sans-serif;
+    font-size: 15px;
+    overflow: hidden;
+    padding: 12px;
+}
+button {
+    font-family: sans-serif;
+    font-size: 12px;
 }
 
 .topnav {
@@ -95,6 +107,7 @@ ul {
     
 }
 
+
 .parks {
     text-align: center;
     
@@ -107,3 +120,4 @@ ul {
     font-size: 2em;
     font-weight: bold;
 }
+
